--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,16 @@
 		<dependency>  
 		    <groupId>org.springframework.boot</groupId>  
 		    <artifactId>spring-boot-starter-thymeleaf</artifactId>  
-		</dependency> 
+		</dependency>
 		
+		<!-- 
+		<dependency>
+		<groupId>com.google.code.kaptcha</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3</version>
+        </dependency>
+		 -->
+		 
 		<!-- shiro核心包 -->  
 	    <dependency>  
 	      <groupId>org.apache.shiro</groupId>  
