--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 		      <version>1.2.2</version>
 		</dependency>
 		
+		<!-- fastDFS -->
+		<dependency>
+		    <groupId>com.github.tobato</groupId>
+		    <artifactId>fastdfs-client</artifactId>
+		    <version>1.26.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
